fixed the hamburger not showing on mobile

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 20rem) and (max-width: 50rem) {
+@media only screen and (min-width: 21rem) and (max-width: 50rem) {
 
     header {
         display: flex;
